WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295095
Placeholder canvas does not always propagate HDR content format correctly to the layer
https://bugs.webkit.org/show_bug.cgi?id=295095
Summary
Placeholder canvas does not always propagate HDR content format correctly to ...
Kimmo Kinnunen
Reported
2025-06-27 03:48:44 PDT
Placeholder canvas does not always propagate content format correctly to the layer Initial implementation for HDR in
bug 294871
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-27 03:48:55 PDT
<
rdar://problem/154478292
>
Kimmo Kinnunen
Comment 2
2025-06-27 03:51:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47233
Kimmo Kinnunen
Comment 3
2025-06-27 04:13:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47292
Matt Woodrow
Comment 4
2025-07-03 17:09:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47591
EWS
Comment 5
2025-07-06 23:05:11 PDT
Committed
297040@main
(fa73c7ed032b): <
https://commits.webkit.org/297040@main
> Reviewed commits have been landed. Closing PR #47591 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug